# kg

./: .gitignore  CLAUDE.md  README.md  example.mcp.json  pyproject.toml
.claude/: settings.json
notebooks/util/: __init__.py
