[project]
name = "kg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pandas-profiling>=3.0.0",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "kaggle>=1.7.4.5",
    "ruff>=0.12.1",
]
